--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,10 +1,12 @@
 
-
 * {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
+
+
+/* ######  header and navebar section ############################################################ */
 
 header{
    background-color: rgb(227, 170, 83);
@@ -42,11 +44,74 @@ ul {
     
   }
 
+/* #######   employees sections   #################################################### */
 
+#employees_contener{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: space-between;
+    margin-bottom: 15%;
+    margin-top: 3%;
+
+
+}
+
+#administration_section{
+    display: flex;
+    flex-flow: row , wrap;
+    align-content: space-around;
+    justify-content: space-around;
+    border: 2px solid black;
+    margin: 3%;
+
+}
+
+#marketing_section{
+    display: flex;
+    flex-flow: row , wrap;
+    align-content: space-around;
+    justify-content: space-around;
+    border: 2px solid black;
+    margin: 3%;
+}
+
+#development_section{
+    display: flex;
+    flex-flow: row , wrap;
+    align-content: space-around;
+    justify-content: space-around;
+    border: 2px solid black;
+    margin: 3%;
+}
+
+#finance_section{
+    display: flex;
+    flex-flow: row , wrap;
+    align-content: space-around;
+    justify-content: space-around;
+    border: 2px solid black;
+    margin: 3%;
+}
+
+
+.employee_contener{
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    align-content: center;
+    width: 25%;
+    height: 30%; 
+    background-color: beige;
+    margin: 5px;
+}
+
+
+/* #######    footer section  ##################################################3 */
 
   footer {
     background-color: rgb(188, 185, 185);
-    height:20%;
+    height:15%;
     width: 100%;
     position: fixed;
     bottom: 0;
