--- a/stylesheet.css
+++ b/stylesheet.css
@@ -59,7 +59,7 @@ ul {
 
 #administration_section{
     display: flex;
-    flex-flow: row , wrap;
+    flex-wrap: wrap;
     align-content: space-around;
     justify-content: space-around;
     border: 2px solid black;
@@ -69,7 +69,7 @@ ul {
 
 #marketing_section{
     display: flex;
-    flex-flow: row , wrap;
+    flex-wrap: wrap;
     align-content: space-around;
     justify-content: space-around;
     border: 2px solid black;
@@ -78,7 +78,7 @@ ul {
 
 #development_section{
     display: flex;
-    flex-flow: row , wrap;
+    flex-wrap: wrap;
     align-content: space-around;
     justify-content: space-around;
     border: 2px solid black;
@@ -87,7 +87,7 @@ ul {
 
 #finance_section{
     display: flex;
-    flex-flow: row , wrap;
+    flex-wrap: wrap;
     align-content: space-around;
     justify-content: space-around;
     border: 2px solid black;
@@ -115,4 +115,14 @@ ul {
     width: 100%;
     position: fixed;
     bottom: 0;
+  }
+
+/*######## accounting page   #################################################*/
+
+/* #table_id{
+    border: 2px solid black;
+} */
+
+table, th, td {
+    border:1px solid black;
   }
