--- a/stylesheet.css
+++ b/stylesheet.css
@@ -119,10 +119,20 @@ ul {
 
 /*######## accounting page   #################################################*/
 
-/* #table_id{
-    border: 2px solid black;
-} */
+ #table_id{
+    /* border: 2px solid black; */
+    margin: 5px;
+    margin-top: 10px;
+} 
 
-table, th, td {
+ th, td {
     border:1px solid black;
   }
+
+
+
+#table_footer{
+  margin-top: 10px;
+  background-color: rgb(184, 213, 236);
+  border: 5px solid black;
+}
